# prueba-turing

./: .dockerignore  .gitignore  Dockerfile  README.md  Reto.md  arquitectura_chatbot_mtg_a68bbee3.plan.md  code_review.md  decisions.md  docker-compose.yml  main.py  pyproject.toml
docs/: README.md  api.md  arquitectura.md  diagramas.md  operacion.md  pipeline.md
ingestion/: pdf_parser.py  run_ingestion.py  vectorstore.py
src/: main.py
src/agent/: base.py  card_generator_agent.py  card_generator_graph.py  graph.py  mtg_agent.py  prompts.py  state.py
src/api/: chat.py  custom_cards.py  health.py
src/clients/: __init__.py  image_generation.py  mtg_client.py
src/config/: logging_config.py  settings.py
src/models/: __init__.py  card.py
src/repositories/: __init__.py  custom_card_repository.py
src/services/: card_renderer.py
src/tools/: __init__.py  card_custom_tool.py  card_image_tool.py  card_search_tool.py  rules_tool.py
src/tools/create_custom_card/: __init__.py  graph.py  tool.py
src/tools/search_cards/: __init__.py  tool.py
src/tools/search_rules/: __init__.py  tool.py
src/tools/search_sets/: __init__.py  tool.py
src/ui/: app.js  index.html  router.py  style.css
src/ui/js/: api.js  config.js  main.js  state.js
src/ui/js/components/: cardInspector.js  chatArea.js  customCardsList.js  healthDashboard.js  recentCardsList.js  themeSelector.js
src/ui/js/utils/: manaRenderer.js  markdown.js
tests/: test_agent.py  test_tools.py
ui/: app.py
