[project]
name = "prueba-turing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "httpx>=0.28.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
